# runic

./: .gitignore  CHANGELOG.md  Cargo.toml  runic.cabal
app/: AST.hs  Main.hs  Parser.hs
app/eval/: Naive.hs
examples/: binding.runic  child.runic  stations.runic
src/: main.rs
